[Raju] converted image dataUrl into Mat Image